--- a/app/views/public/pages/animation_test.html.erb
+++ b/app/views/public/pages/animation_test.html.erb
@@ -20,3 +20,10 @@
 <!-- Spacer -->
 <div style="height: 4000px;"></div>
 
+<div id="canvas3" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
+<div style="height: 6000px;"></div>
+
+<div id="canvas4" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
+<div style="height: 12000px;"></div>
