--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -19,7 +19,7 @@
         <%= options_supplementaires_link(admin_users_path, "bi-person-circle", "Comptes", "btn-outline-primary") if current_admin_user.admin? %>
         <%= options_supplementaires_link(admin_profiles_path, "bi-person-check", "Profiles", "btn-outline-dark") if current_admin_user.admin? %>
         <%= options_supplementaires_link(admin_textes_path, "bi-flag", "Marketing", "btn-outline-warning") if current_admin_user.admin? %>
-        <%= options_supplementaires_link(admin_analyses_index_path, "bi-graph-up-arrow", "Analyses", "btn-outline-success") if current_admin_user.admin? %>
+        <%= options_supplementaires_link(admin_analyses_index_path, "bi-graph-up-arrow", "Analyses", "btn-outline-success") %>
         <%= options_supplementaires_link(admin_etiquettes_index_path, "bi-tags", "Etiquettes", "btn-outline-secondary") %>
         <%= options_supplementaires_link(admin_stock_index_path, "bi-boxes", "Stocks", "btn-outline-danger") %>
         <%= options_supplementaires_link(admin_fournisseurs_path, "bi-buildings", "Fournisseurs", "btn-outline-dark") if current_admin_user.admin? %>
