--- a/app/views/admin/pdf_commande/_synthese.html.erb
+++ b/app/views/admin/pdf_commande/_synthese.html.erb
@@ -20,28 +20,6 @@
         </table>
     </div>
 
-    <% if @doc_edition.commentaires.present? %>
-        <div class="cadre my-2">
-        <span class="bolded">Commentaires </span> 
-        <span class=""> <%= @doc_edition.commentaires %> </span> <br>
-        <br>
-        </div>
-    <% end %>
-
-    <% if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
-    <br>
-        <div class="cadre my-2">
-            <span class="bolded">Prochain rendez-vous: </span> <br>
-            <span class=""> 
-                <%= @doc_edition.commande.meetings.first.start_time.strftime("%d/%m/%y" " à %H:%M") %> 
-            </span> <br>
-        </div>
-    <% end %>
-
-    <br>
-    <div class="cadre my-2 bloc-mention mt-2">
-        Toute réservation est définitive. En cas d'annulation, un avoir pourra être émis. <br>
-        Pour tout retard de restitution de location, une somme forfaitaire de 15€/jour pourra être perçue.
-    </div>
+    <%= render  "admin/pdf_commande/mentions" %>
 
 <%# end %>
