--- a/app/views/admin/analyses/_chartLineCommandes.html.erb
+++ b/app/views/admin/analyses/_chartLineCommandes.html.erb
@@ -1,65 +1,69 @@
-
-  <div class="chartBox mx-auto">
-    <canvas id="myChartLine"></canvas>
-  </div>
+<div class="chartBox mx-auto">
+  <canvas id="myChartLine"></canvas>
+</div>
 
 <script>
-   
   var couleur1 = 'rgb(233, 119, 119)';
   var couleur2 = 'rgb(255, 159, 159)';
 
-// CHART BAR
-    var dataLineCommande = {
-     
-      datasets: [{
-        data: <%= @groupedByDate.to_json.html_safe %>,
-        fill: true,
-        backgroundColor: [couleur2, couleur1 ],
-        borderWidth: 1
-      }]
-    };
+  var dataLineCommande = {
+    labels: <%= @groupedByDate.keys.to_json.html_safe %>,
+    datasets: [{
+      data: <%= @groupedByDate.values.to_json.html_safe %>,
+      fill: true,
+      backgroundColor: [couleur2, couleur1],
+      borderColor: 'rgb(0, 0, 0)',
+      borderWidth: 1,
+      pointBorderWidth: 1,
+      pointHoverBorderWidth: 20,
+      tension: 0.4
+    }]
+  };
 
-    var delayedLine;
+  var delayedLine;
 
-    var configLine = {
-      type: 'line',
-      data: dataLineCommande,
-      options: {
+  var configLine = {
+    type: 'line',
+    data: dataLineCommande,
+    options: {
+      plugins: {
+        legend: {
+          display: false
+        }
+      },
+      aspectRatio: 1,
 
-        plugins: {
-            legend: {
-                display: false
-            },
+      animation: {
+        onComplete: () => {
+          delayedLine = true;
         },
-        aspectRatio: 1,
-
-         animation: {
-                onComplete: () => {
-                    delayed = true;
-                },
-                delay: (context) => {
-                    let delay = 0;
-                    if (context.type === 'data' && context.mode === 'default' && !delayedLine) {
-                    delay = context.dataIndex * 2000  + context.datasetIndex * 10;
-                    }
-                    return delay;
-                },
-            },
-
-            borderColor:'rgb(0, 0, 0)',
-            pointBorderWidth: 1,
-            pointHoverBorderWidth: 20,
-            lineTension: 0.4,
-
+        delay: (context) => {
+          let delay = 0;
+          if (context.type === 'data' && context.mode === 'default' && !delayedLine) {
+            delay = context.dataIndex * 200 + context.datasetIndex * 10;
           }
-      };
+          return delay;
+        }
+      },
 
-        // render init block
-    var myChartLine = new Chart(
-      document.getElementById('myChartLine'),
-      configLine
-    );
-  
+      scales: {
+        y: {
+          beginAtZero: true,
+          ticks: {
+            stepSize: 1,
+            callback: function(value) {
+              if (Number.isInteger(value)) {
+                return value;
+              }
+            }
+          }
+        }
+      }
+    }
+  };
 
-
+  var myChartLine = new Chart(
+    document.getElementById('myChartLine'),
+    configLine
+  );
 </script>
