--- a/app/views/admin/analyses/_chartBarCommandes.html.erb
+++ b/app/views/admin/analyses/_chartBarCommandes.html.erb
@@ -1,76 +1,69 @@
+<div class="chartBox mx-auto">
+  <canvas id="myChartBar2"></canvas>
+</div>
 
-  <div class="chartBox mx-auto">
-    <canvas id="myChartBar2"></canvas>
-  </div>
+<% @data = [@nbRetire, @nbNonRetire, @nbRendu] %>
 
-  <% @data = [@nbRetire, @nbNonRetire, @nbRendu] %>
-  <% @dataLine = [@nbRetire, @nbNonRetire, @nbRendu] %>
-
-  
 <script>
-   
   var couleur1 = 'rgb(233, 119, 119)';
   var couleur2 = 'rgb(255, 159, 159)';
   var couleur3 = 'rgb(252, 221, 176)';
 
-  var data1 = <%= @dataLine %>;
-  var data2 = <%= @dataLine %>;
+  var dataBar2 = {
+    labels: ['Retiré', 'Non-retiré', 'Rendu'],
+    datasets: [{
+      data: <%= @data.to_json.html_safe %>,
+      fill: true,
+      backgroundColor: [couleur1, couleur2, couleur3],
+      borderColor: 'rgb(0, 0, 0)',
+      borderWidth: 1
+    }]
+  };
 
-  var nbTotal = <%= @nbTotal %>;
+  var delayedBar2;
 
-// CHART BAR
-    var dataBar2 = {
-      labels: ['Retiré', 'Non-retiré', 'Rendu'],
-      datasets: [{
-      
-        data: <%= @data.to_json.html_safe %>,
-        fill: true,
-        backgroundColor: [ couleur1, couleur2, couleur3 ],
-        borderWidth: 1
-      }]
-    };
+  var configBar2 = {
+    type: 'bar',
+    data: dataBar2,
+    options: {
+      plugins: {
+        legend: {
+          display: false
+        }
+      },
+      aspectRatio: 1,
 
-    var delayed;
-
-    var configBar2 = {
-      type: 'bar',
-      data: dataBar2,
-      options: {
-
-        plugins: {
-            legend: {
-                display: false
-            },
+      animation: {
+        onComplete: () => {
+          delayedBar2 = true;
         },
-        aspectRatio: 1,
-
-         animation: {
-                onComplete: () => {
-                    delayed = true;
-                },
-                delay: (context) => {
-                    let delay = 0;
-                    if (context.type === 'data' && context.mode === 'default' && !delayed) {
-                    delay = context.dataIndex * 2000  + context.datasetIndex * 10;
-                    }
-                    return delay;
-                },
-            },
-
-            borderColor:'rgb(0, 0, 0)',
-            pointBorderWidth: 1,
-            pointHoverBorderWidth: 20,
-            lineTension: 0.4,
-
+        delay: (context) => {
+          let delay = 0;
+          if (context.type === 'data' && context.mode === 'default' && !delayedBar2) {
+            delay = context.dataIndex * 200 + context.datasetIndex * 10;
           }
-      };
+          return delay;
+        }
+      },
 
-        // render init block
-    var myChartBar2 = new Chart(
-      document.getElementById('myChartBar2'),
-      configBar2
-    );
-  
+      scales: {
+        y: {
+          beginAtZero: true,
+          ticks: {
+            stepSize: 1,
+            callback: function(value) {
+              if (Number.isInteger(value)) {
+                return value;
+              }
+            }
+          }
+        }
+      }
+    }
+  };
 
-
+  var myChartBar2 = new Chart(
+    document.getElementById('myChartBar2'),
+    configBar2
+  );
 </script>
