improve animation scene 1 and 2

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -25,7 +25,7 @@
 
   </head>
 
-  <body class="pb-4">
+  <body class="pb-4 bg-black">
     <% unless controller_name == 'pages' && action_name == 'animation' %> 
       <%= render "public/shared/navbar" %>
     <% end %>
