work on main scene

--- a/app/views/public/pages/animation.html.erb
+++ b/app/views/public/pages/animation.html.erb
@@ -20,3 +20,4 @@
 <!-- Spacer -->
 <div style="height: 5000px;"></div>
 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
