--- a/app/views/public/pages/animation.html.erb
+++ b/app/views/public/pages/animation.html.erb
@@ -20,4 +20,6 @@
 <!-- Spacer -->
 <div style="height: 5000px;"></div>
 
+<div id="canvasOverlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 1000;"></div>
+
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
