--- a/app/views/admin/selection_produit/_selection_qr.html.erb
+++ b/app/views/admin/selection_produit/_selection_qr.html.erb
@@ -1,27 +1,38 @@
-
 <div data-controller="qr-code-ajout-article">
   <div class="container-fluid p-2"> 
 
     <div class="container d-flex justify-content-center align-items-center">
       <div class="m-2" id="sourceSelectPanel">
-        <select id="sourceSelect" class="form-select m-2" style="max-width:400px;"> </select>
+        <select id="sourceSelect" class="form-select m-2" style="max-width:400px;"></select>
       </div>
+
       <a class="button btn btn-primary m-2" id="startButton" data-action="click->qr-code-ajout-article#startScan">Démarrer</a>
-      <a class="button btn btn-danger m-2" id="resetButton"  data-action="click->qr-code-ajout-article#stopScan" style="display: none;">Arrêter</a>
+      <a class="button btn btn-danger m-2" id="resetButton" data-action="click->qr-code-ajout-article#stopScan" style="display: none;">Arrêter</a>
     </div>
 
     <div class="text-center mt-2">
-      <video id="video" style=" width: 100%; max-width: 600px; height: auto;"></video>
+      <video id="video" style="width: 100%; max-width: 600px; height: auto;"></video>
     </div>
 
-      
-    <div id="count">  </div> <br>
-    <div id="results">  </div>
+    <!-- 🔍 Ajout du champ pour la douchette -->
+    <div class="text-center mt-3">
+      <input
+        type="text"
+        id="scannerInput"
+        class="form-control"
+        style="max-width: 400px; margin: 0 auto;"
+        placeholder="Scannez un QR code avec la douchette"
+        data-action="change->qr-code-ajout-article#handleScannerInput"
+        autofocus
+      />
+    </div>
 
+    <div id="count"></div>
+    <br>
+    <div id="results"></div>
 
-  <form data-action="submit@submit->rails#create">
-    <input type="hidden" id="produit" name="produit">
-  </form>
-
+    <form data-action="submit@submit->rails#create">
+      <input type="hidden" id="produit" name="produit">
+    </form>
   </div>
 </div>
