--- a/app/views/admin/selection_produit/_selection_qr.html.erb
+++ b/app/views/admin/selection_produit/_selection_qr.html.erb
@@ -19,7 +19,7 @@
       <input
         type="text"
         id="scannerInput"
-        class="form-control"
+        class="form-control text-center"
         style="max-width: 400px; margin: 0 auto;"
         placeholder="Scannez un QR code avec la douchette"
         data-action="change->qr-code-ajout-article#handleScannerInput"
