fix fields numbers and option on type event

--- a/app/views/admin/clients/_form.html.erb
+++ b/app/views/admin/clients/_form.html.erb
@@ -32,7 +32,7 @@
 
       <%= custom_form_elements(form, 
         [:commentaires, :text_area],
-        [:tel, :text_field], [:tel2, :number_field],
+        [:tel, :number_field], [:tel2, :number_field],
         [:mail, :text_field], [:mail2, :text_field], [:adresse, :text_field],
         [:cp, :text_field], [:ville, :text_field], [:pays, :text_field], [:contact, :text_field]
       ) %>
