base ajout option analyse dans index produits avec donnees de synthese et affichage tableau

--- a/app/views/admin/analyses/index.html.erb
+++ b/app/views/admin/analyses/index.html.erb
@@ -1,9 +1,8 @@
-<div class="card m-2 shadow-sm">
 
-  <div class="card-header bg-dark text-light text-center">
-    <i class="bi bi-xl brand-colored bi bi-graph-up-arrow ms-1 me-3"></i>
-    <strong>Analyses</strong> 
-  </div> 
+<%= bandeau_entete("Ventes", "graph-up-arrow", "", "", "") %>
+
+
+<div class="card m-2 shadow-sm">
 
   <div class="card-body text-dark ">
 
