--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -2,9 +2,10 @@
 
 
   <% if @analysis_mode %>
-    <div>
-      <%= produit.nom %>
-    </div>
+        <div class="card small mx-2 px-1 mb-1">
+          <%= produit.nom_ref_couleur_taille %>
+        </div>
+
   <% else %>
 
     <div class="card mx-2 mb-3 light-beige-colored shadow-sm my-2">
