--- a/app/views/admin/produits/_form.html.erb
+++ b/app/views/admin/produits/_form.html.erb
@@ -40,6 +40,7 @@
             select_options: { include_blank: '' }}],
           [:prixvente, :number_field, "Prix vente TTC", { step: "any" }],
           [:prixlocation, :number_field, "Prix location TTC", { step: "any" }],
+          [:caution, :number_field, "Caution", { step: "any" }],
           [:poids, :number_field, "Poids (grammes)", { step: "any" }],
           [:description, :text_area], 
           [:quantite, :number_field],
