--- a/app/views/admin/pdf_commande/_facture_simple.html.erb
+++ b/app/views/admin/pdf_commande/_facture_simple.html.erb
@@ -3,11 +3,12 @@
     <td style="vertical-align: center; width: 80%; padding: 5px;">
       <%= @doc_edition.label_facture_simple %>
     </td>
-    <td style="vertical-align: top; padding: 5px;">
-      <div>total HT: <%= du_prix_ht(@doc_edition.commande) %></div>
-      <div>TVA: <%= tva_sur_prix(@doc_edition.commande) %></div>
-      <div>total TTC: <%= du_prix(@doc_edition.commande) %></div>
+    <td style="vertical-align: top; padding: 5px; text-align: right;">
+      <div>total HT: <%= number_to_currency(du_prix_ht(@doc_edition.commande), unit: "€", separator: ",", delimiter: " ", format: "%n %u") %></div>
+      <div>TVA: <%= number_to_currency(tva_sur_prix(@doc_edition.commande), unit: "€", separator: ",", delimiter: " ", format: "%n %u") %></div>
+      <div>total TTC: <%= number_to_currency(du_prix(@doc_edition.commande), unit: "€", separator: ",", delimiter: " ", format: "%n %u") %></div>
     </td>
+
   </tr>
 </table>
 
