--- a/app/views/admin/commandes/_footer.html.erb
+++ b/app/views/admin/commandes/_footer.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid m-0 p-0 d-flex align-items-center justify-content-between gap-1 p-2">
 
-    <span class="badge bg-secondary fw-bold m-1 fs-6 shadow-sm text-light">
+    <span class="badge bg-secondary fw-bold m-1 small shadow-sm text-light">
         <%= @commande.ref_commande %>        
     </span>
 
     <%= render 'synthese' %>
 
-    <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+    <button class="btn btn-sm btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
         <i class="bi bi-file-earmark-text"></i>
         <span class="d-none d-md-inline ms-1">editer</span>
     </button>
